docs: Add impact of inaction section to Nova DEP
Addresses reviewer questions about consequences of delaying or
not implementing Nova at all.

Signed-off-by: Ryan Olson <rolson@nvidia.com>

--- a/deps/0000-nova.md
+++ b/deps/0000-nova.md
@@ -58,6 +58,20 @@ are tightly coupled to this single pattern.
 3. **KVBM Requirements**: Distributed KV Block Manager requires bidirectional communication streams for search queries and NIXL descriptor exchange with a coordinating "actor" - impossible with
 current abstractions.
 
+## Impact of Inaction
+
+### If We Delay This Work
+
+- **ServerStreaming remains the only paradigm**: All communication must follow the streaming response pattern, even when inappropriate (e.g., simple request/response operations)
+- **Distributed KVBM is blocked**: The KV Block Manager cannot be implemented in a distributed fashion without bidirectional communication primitives
+
+### If We Never Do This
+
+- **Architectural rigidity**: Dynamo becomes locked into a single communication pattern, forcing all future features to shoehorn into ServerStreaming regardless of fit
+- **Competitive disadvantage**: Inference is becoming increasingly distributed in nature. A system built on a single-tool communication model will struggle to adapt as new patterns emerge (streaming audio, real-time bidirectional protocols, etc.)
+- **Missed optimization opportunities**: Many use cases (health checks, metadata queries, cache lookups) are naturally unary RPC - forcing them through streaming adds unnecessary overhead
+- **Limited future adaptability**: Building on a flexible foundation now enables responding to unforeseen communication requirements; retrofitting later is significantly more costly
+
 ## Why Active Messaging?
 
 Active messaging is a communication model where **messages carry both data and a handler identifier**, triggering execution at the destination. This paradigm, proven in HPC systems for over 30
