docs: Add downsides section to Nova DEP
Documents tradeoffs of the Nova approach:
- Loss of full-stack tooling vs gRPC
- Risk of transport over-coupling
- Constrained feature set across multiple backends

Signed-off-by: Ryan Olson <rolson@nvidia.com>

--- a/deps/0000-nova.md
+++ b/deps/0000-nova.md
@@ -121,6 +121,28 @@ transport abstraction benefits.
 * **Discovery Protocol**: This DEP does not specify peer discovery. `WorkerAddress` and `PeerInfo` are designed to be key-value store friendly for external discovery integration.
 * **Wire Protocol Specification**: Transport-specific wire formats are implementation details, not part of this specification.
 
+## Downsides
+
+This approach involves tradeoffs that should be acknowledged:
+
+### Loss of Full-Stack Tooling (vs. gRPC)
+
+With gRPC, `protoc` automatically generates client-side accessors, strongly-typed stubs, and the wire protocol has well-defined semantics with extensive tooling support. Nova does not provide this level of code generation.
+
+**Mitigation**: Protobufs can still be used with Nova since handlers accept and return raw bytes - any serialization format works. However, this requires more manual effort than a full-stack gRPC solution where everything is generated from `.proto` files.
+
+### Risk of Transport Over-Coupling
+
+Directly exposing multiple transport implementations creates risk that application code becomes coupled to transport-specific behaviors. Unwinding such coupling is painful.
+
+**Mitigation**: The `Transport` trait provides a clear abstraction boundary. Application code should interact with Nova's handler registration and sending APIs, not transport internals.
+
+### Constrained Feature Set
+
+Supporting common features across multiple transport implementations (TCP, gRPC, UCX, NATS) is inherently harder than optimizing for a single stack. Nova's feature set will necessarily be the intersection of what's feasible across all backends, rather than the union of each backend's capabilities.
+
+**Mitigation**: Nova focuses on the active message primitive which maps naturally to all transports. Transport-specific optimizations (e.g., UCX rendezvous) are exposed where possible but not required.
+
 ## Requirements
 
 ### REQ 1: Handler Registration
